Remove count endpoints
